# NovaAi

./: README.md
Nova_AI_resume-main/Nova_AI_resume-main/: README.md  groqai.py  main.py  pyproject.toml
Nova_AI_resume-main/Nova_AI_resume-main/data_folder/: job_description.txt  plain_text_resume.yaml  resume_format.tex
Nova_AI_resume-main/Nova_AI_resume-main/data_folder/output/: generated_resume.tex
